--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,6 +44,7 @@ jobs:
       - uses: ArtiomTr/jest-coverage-report-action@v2
         id: coverage
         with:
+          github-token: ${{ secrets.JEST_GITHUB_SECRET_TOKEN }}
           test-script: yarn test:cov
           package-manager: yarn
           skip-step: install
